<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Resistance: Avalon</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="game">Game</string>
    <string name="rules">Rules</string>
    <string name="history">History</string>
    <string name="merlin_desc">Good - Knows evil, must remain hidden</string>
    <string name="percival_desc">Good - Knows Merlin</string>
    <string name="mordred_desc">Evil - Unknown to Merlin</string>
    <string name="oberon_desc">Evil - Unknown to Evil</string>
    <string name="morgana_desc">Evil - Appears as Merlin</string>
    <string name="minion_desc">Evil - Fights for Mordred</string>
    <string name="servant_desc">Good - Fights for Arthur</string>
    <string name="servant">Servant of Arthur</string>
    <string name="minion">Minion of Mordred</string>
    <string name="merlin">Merlin</string>
    <string name="percival">Percival</string>
    <string name="mordred">Mordred</string>
    <string name="oberon">Oberon</string>
    <string name="morgana">Morgana</string>
    <string name="alignment">Alignment</string>
    <string name="next">Next</string>
    <string name="allies">Allies</string>
    <string name="unknown">Unknown</string>
    <string name="assigned">All characters assigned,</string>
    <string name="hunting">Happy Hunting!</string>
    <string name="won">Who won?</string>
    <string name="number">Number of Players?</string>
    <string name="special">Special Characters:</string>
    <string name="pass">Please pass it to:</string>

    <string-array name="players_array">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
