<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/brick_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="250dp"
        android:id="@+id/characterImage"
        android:src="@drawable/merlin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Large Text"
        android:id="@+id/characterName"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#3399FF"
        android:text="@string/alignment"
        android:textStyle="italic"
        android:id="@+id/alignment"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/allies"
                android:id="@+id/allies"
                android:textStyle="bold"
                android:paddingRight="15dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/unknown"
                android:paddingRight="15dp"
                android:id="@+id/ally1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=""
                android:paddingRight="15dp"
                android:id="@+id/ally2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=""
                android:paddingRight="15dp"
                android:id="@+id/ally3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text=""
                android:paddingRight="15dp"
                android:id="@+id/ally4" />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nextPerson"
        android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>